--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,6 @@
 </div>
 
 <div class="content" role="main">
-  <span>{{ NAME }}.{{ VERSION }} app is running!</span>
+  <span>{{ title }} app is running!</span>
 </div>
 <router-outlet></router-outlet>
