added crud provider

--- a/src/app/welcome.component.html
+++ b/src/app/welcome.component.html
@@ -7,6 +7,6 @@
   </button>
 </mat-toolbar>
 <mat-grid-list cols="1" rowHeight="4:1">
-  <mat-grid-tile><br>Welcome to POS</mat-grid-tile>
+  <mat-grid-tile><br>Welcome to TPV</mat-grid-tile>
 </mat-grid-list>
 
