--- a/src/app/welcome.component.css
+++ b/src/app/welcome.component.css
@@ -1,7 +1,7 @@
 .mat-toolbar {
   justify-content: space-between;
-  z-index: 998;
-  position: fixed;
+  /*  z-index: 998;
+    position: fixed;*/
 }
 
 .mat-grid-tile {
