--- a/src/app/home/providers/provider-creation-updating-dialog.component.html
+++ b/src/app/home/providers/provider-creation-updating-dialog.component.html
@@ -29,8 +29,8 @@
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-dialog-close mat-raised-button>Close</button>
-  <button (click)="createProvider()" *ngIf="isCreate()" [disabled]=invalid() color="primary" mat-raised-button>Create
+  <button (click)="create()" *ngIf="isCreate()" [disabled]=invalid() color="primary" mat-raised-button>Create
   </button>
-  <button (click)="updateProvider()" *ngIf="!isCreate()" [disabled]=invalid() color="primary" mat-raised-button>Update
+  <button (click)="update()" *ngIf="!isCreate()" [disabled]=invalid() color="primary" mat-raised-button>Update
   </button>
 </mat-dialog-actions>
