--- a/src/app/home/articles/articles.component.html
+++ b/src/app/home/articles/articles.component.html
@@ -1,30 +1,12 @@
-<mat-card>
-  <mat-card-content>
-    <mat-form-field>
-      <input (ngModelChange)="filter($event)"
-             [(ngModel)]="barcode"
-             [matAutocomplete]="auto"
-             matInput
-             placeholder="Barcode"
-             type="text"
-      >
-      <button (click)="searchByBarcode()" mat-button mat-icon-button matSuffix>
-        <mat-icon>autorenew</mat-icon>
-      </button>
-      <button (click)="barcode=''" *ngIf="barcode" mat-button mat-icon-button matSuffix>
-        <mat-icon>close</mat-icon>
-      </button>
-      <mat-autocomplete #auto="matAutocomplete">
-        <mat-option *ngFor="let option of barcodes | async" [value]="option">
-          {{option}}
-        </mat-option>
-      </mat-autocomplete>
-    </mat-form-field>
-  </mat-card-content>
-</mat-card>
+<app-search title="Barcode" [keys]="barcodes" [(key)]="barcode" (renew)="searchByBarcode()"></app-search>
+<p>{{barcode}}</p>
 
 <mat-card>
   <mat-card-content>
+    <mat-form-field>
+      <mat-label>Barcode</mat-label>
+      <input [(ngModel)]="articleSearch.barcode" matInput>
+    </mat-form-field>
     <mat-form-field>
       <mat-label>Description</mat-label>
       <input [(ngModel)]="articleSearch.description" matInput>
@@ -36,6 +18,7 @@
     <mat-form-field>
       <mat-label>Stock</mat-label>
       <input [(ngModel)]="articleSearch.stock" matInput>
+      <mat-hint align="start">Less than</mat-hint>
     </mat-form-field>
     <mat-slide-toggle [(ngModel)]="articleSearch.discontinued">Discontinued</mat-slide-toggle>
     <button (click)="search()" mat-icon-button>
