--- a/src/app/home/articles/article-creation-updating-dialog.component.html
+++ b/src/app/home/articles/article-creation-updating-dialog.component.html
@@ -1,39 +1,41 @@
 <h2 mat-dialog-title>{{title}}</h2>
 <mat-dialog-content>
-  <mat-form-field>
+  <mat-form-field class="full-width">
     <mat-label>Barcode</mat-label>
     <input [(ngModel)]="article.barcode" cdkFocusInitial id="company" matInput required type="text"/>
   </mat-form-field>
-  <mat-form-field>
+  <mat-form-field class="full-width">
     <mat-label>Description</mat-label>
     <input [(ngModel)]="article.description" matInput required type="text"/>
   </mat-form-field>
-  <mat-form-field>
+  <mat-form-field class="full-width">
     <mat-label>Retail Price</mat-label>
     <input [(ngModel)]="article.retailPrice" matInput required type="number">
     <mat-hint align="start">9 digits</mat-hint>
   </mat-form-field>
-  <mat-form-field>
+  <mat-form-field class="full-width">
     <mat-label>Reference</mat-label>
     <input [(ngModel)]="article.reference" matInput type="email">
   </mat-form-field>
-  <mat-form-field>
+  <mat-form-field class="full-width">
     <mat-label>Stock</mat-label>
     <input [(ngModel)]="article.stock" matInput type="number"/>
   </mat-form-field>
-  <mat-form-field>
+  <mat-form-field class="full-width">
     <mat-label>Tax</mat-label>
-    <input [(ngModel)]="article.tax" matInput type="text"/>
+    <mat-select [(ngModel)]="article.tax">
+      <mat-option *ngFor="let tax of taxValues" [value]="tax">
+        {{tax}}
+      </mat-option>
+    </mat-select>
   </mat-form-field>
   <mat-slide-toggle [(ngModel)]="article.discontinued">Discontinued</mat-slide-toggle>
-  <mat-form-field>
+  <mat-form-field *ngIf="article.registrationDate" class="full-width">
     <mat-label>Registration Date</mat-label>
-    <input [(ngModel)]="article.registrationDate" matInput type="date"/>
+    <input [(ngModel)]="article.registrationDate" matInput readonly type="text"/>
   </mat-form-field>
-  <mat-form-field>
-    <mat-label>Provider Company</mat-label>
-    <input [(ngModel)]="article.providerCompany" matInput type="text"/>
-  </mat-form-field>
+  <app-search (renew)="searchByCompany()" [(key)]="article.providerCompany" [keys]="companies"
+              class="full-width" title="Company"></app-search>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-dialog-close mat-raised-button>Close</button>
