--- a/src/app/home/articles/articles.component.html
+++ b/src/app/home/articles/articles.component.html
@@ -1,6 +1,3 @@
-<app-search title="Barcode" [keys]="barcodes" [(key)]="barcode" (renew)="searchByBarcode()"></app-search>
-<p>{{barcode}}</p>
-
 <mat-card>
   <mat-card-content>
     <mat-form-field>
@@ -27,6 +24,13 @@
     <button (click)="resetSearch()" mat-icon-button>
       <mat-icon>close</mat-icon>
     </button>
+    <mat-form-field>
+      <mat-label>Unfinished</mat-label>
+      <input [(ngModel)]="articleSearch.reference" matInput readonly>
+      <button (click)="unfinished()" mat-button mat-icon-button matSuffix>
+        <mat-icon>search</mat-icon>
+      </button>
+    </mat-form-field>
   </mat-card-content>
 </mat-card>
 <app-crud (create)="create()" (read)="read($event)" (update)="update($event)" [columns]="columns"
