--- a/src/app/core/read-detail.dialog.component.html
+++ b/src/app/core/read-detail.dialog.component.html
@@ -1,6 +1,6 @@
 <h1 mat-dialog-content>{{title}}</h1>
 <mat-dialog-content>
-  <mat-label *ngFor="let def of labels"><strong>{{def | uppercase}}: </strong>{{object[def]}}</mat-label>
+  <mat-label *ngFor="let def of labels"><strong>{{def | uppercaseWords}}: </strong>{{object[def]}}</mat-label>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-dialog-close mat-raised-button>Close</button>
