--- a/src/app/home/articles/article-creation-updating-dialog.component.html
+++ b/src/app/home/articles/article-creation-updating-dialog.component.html
@@ -2,7 +2,7 @@
 <mat-dialog-content>
   <mat-form-field class="full-width">
     <mat-label>Barcode</mat-label>
-    <input [(ngModel)]="article.barcode" cdkFocusInitial id="company" matInput required type="text"/>
+    <input [(ngModel)]="article.barcode" id="company" matInput required type="text"/>
   </mat-form-field>
   <mat-form-field class="full-width">
     <mat-label>Description</mat-label>
@@ -38,7 +38,7 @@
               class="full-width" title="Company"></app-search>
 </mat-dialog-content>
 <mat-dialog-actions>
-  <button mat-dialog-close mat-raised-button>Close</button>
+  <button cdkFocusInitial mat-dialog-close mat-raised-button>Close</button>
   <button (click)="create()" *ngIf="isCreate()" [disabled]=invalid() color="primary" mat-raised-button>Create
   </button>
   <button (click)="update()" *ngIf="!isCreate()" [disabled]=invalid() color="primary" mat-raised-button>Update
