--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,7 @@
 <mat-toolbar color="primary">
   <img alt="miw" src="../../assets/img/miw.png"/>
   <span>TPV </span>
-  <span class="backend"><small><small> Back-end: {{backend}}</small></small></span>
-  <span class="toolbar-spacer"></span>
+  <!--<span class="toolbar-spacer"></span>-->
   <span>
     <app-date></app-date>
     <button (click)="logout()" mat-button>
@@ -42,7 +41,7 @@
   </button>
   <button [matMenuTriggerFor]="users" mat-menu-item>
     <mat-icon>people</mat-icon>
-    <span>Staff & Customers</span>
+    <span>Users</span>
   </button>
 </mat-menu>
 <mat-menu #settings="matMenu">
@@ -126,7 +125,7 @@
   </button>
 </mat-menu>
 <mat-menu #users="matMenu">
-  <button mat-menu-item routerLink="/home/users">
+  <button disabled="disabled" mat-menu-item routerLink="/home/users">
     <mat-icon>account_circle</mat-icon>
     <span>Users</span>
   </button>
