--- a/src/app/core/search.component.html
+++ b/src/app/core/search.component.html
@@ -5,6 +5,7 @@
          [ngModel]="key"
          matInput
          type="text"
+         [required]="obligatory"
   >
   <button (click)="onRenew()" mat-icon-button matSuffix matTooltip="Renew" matTooltipShowDelay="2000">
     <mat-icon>autorenew</mat-icon>
