created shared module 3

--- a/src/app/home/welcome.component.html
+++ b/src/app/home/welcome.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <img alt="miw" src="../assets/img/miw.png"/>
+  <img alt="miw" src="../../assets/img/miw.png"/>
   <mat-card-title>{{title}}</mat-card-title>
   <button (click)="login()" mat-button>
     <mat-icon>person_outline</mat-icon>
