--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -95,7 +95,7 @@
   </button>
 </mat-menu>
 <mat-menu #products="matMenu">
-  <button mat-menu-item routerLink="/home/articles">
+  <button mat-menu-item routerLink="/shop/articles">
     <mat-icon>view_list</mat-icon>
     <span>Articles</span>
   </button>
@@ -107,7 +107,7 @@
     <mat-icon>view_module</mat-icon>
     <span>Create Family sizes</span>
   </button>
-  <button mat-menu-item routerLink="/home/providers">
+  <button mat-menu-item routerLink="/shop/providers">
     <mat-icon>local_shipping</mat-icon>
     <span>Providers</span>
   </button>
@@ -125,7 +125,7 @@
   </button>
 </mat-menu>
 <mat-menu #users="matMenu">
-  <button disabled="disabled" mat-menu-item routerLink="/home/users">
+  <button disabled="disabled" mat-menu-item routerLink="/shop/users">
     <mat-icon>account_circle</mat-icon>
     <span>Users</span>
   </button>
