--- a/src/app/shop/shared/search-by-company.component.html
+++ b/src/app/shop/shared/search-by-company.component.html
@@ -1,2 +1,2 @@
-<app-search (renew)="searchByCompany()" [(key)]="company" [keys]="companies" obligatory="true" (selected)="onSelect()"
-            class="full-width" title="Company"></app-search>
+<app-search (renew)="searchByCompany()" (selected)="onSelect()" [(key)]="company" [keys]="companies" class="full-width"
+            obligatory="true" title="Company"></app-search>
