--- a/src/app/shared/components/footer.component.html
+++ b/src/app/shared/components/footer.component.html
@@ -1,9 +1,52 @@
-<mat-toolbar color="primary">
-  <mat-card-title>UPM-MIW</mat-card-title>
-  <mat-card-content class="hide">
-    <span>Back-ends: {{backEndUser}} & {{backEndCore}}</span>
-  </mat-card-content>
-  <mat-card-content class="hide">
-    <span>Front-end: {{version}}({{profile}})</span>
-  </mat-card-content>
-</mat-toolbar>
+<mat-divider></mat-divider>
+<mat-grid-list cols="3" rowHeight="240px">
+  <mat-grid-tile>
+    <mat-list>
+      <div mat-subheader><img alt="miw" src="../../../assets/img/miw.png"/></div>
+      <mat-list-item>
+        <mat-icon mat-list-icon>location_on</mat-icon>
+        <div mat-line>C/ Alan Turing s/n, 28031 Madrid</div>
+        <div mat-line></div>
+      </mat-list-item>
+      <mat-list-item>
+        <mat-icon mat-list-icon>call</mat-icon>
+        <div mat-line>+34 913366000</div>
+      </mat-list-item>
+      <mat-list-item>
+        <mat-icon mat-list-icon>mail_outline</mat-icon>
+        <div mat-line> miw.etsisi@upm.es</div>
+      </mat-list-item>
+    </mat-list>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <mat-list>
+      <div mat-subheader>ARTIFACTS VERSIONS</div>
+      <mat-list-item>
+        <mat-icon mat-list-icon>computer</mat-icon>
+        <div mat-line>Front-end - {{version}}({{profile}})</div>
+      </mat-list-item>
+      <mat-list-item>
+        <mat-icon mat-list-icon>cloud_queue</mat-icon>
+        <div mat-line>Back-end-user - {{backEndUser}}</div>
+      </mat-list-item>
+      <mat-list-item>
+        <mat-icon mat-list-icon>cloud_queue</mat-icon>
+        <div mat-line>Back-end-core - {{backEndCore}}</div>
+      </mat-list-item>
+    </mat-list>
+  </mat-grid-tile>
+  <mat-grid-tile>
+    <mat-list>
+      <div mat-subheader>ABOUT AS</div>
+      <mat-list-item>
+        <div mat-line>Universidad Politécnica de Madrid</div>
+      </mat-list-item>
+      <mat-list-item>
+        <div mat-line>Máster en Ingeniería Web</div>
+      </mat-list-item>
+      <mat-list-item>
+        <div mat-line>Back-end con Tecnologías de Código Abierto</div>
+      </mat-list-item>
+    </mat-list>
+  </mat-grid-tile>
+</mat-grid-list>
