--- a/src/app/shop/cashier-opened/shopping-cart/shopping-cart.component.html
+++ b/src/app/shop/cashier-opened/shopping-cart/shopping-cart.component.html
@@ -13,15 +13,20 @@
         </button>
       </form>
       <app-search-by-barcode (add)="addBarcode($event)" [barcode]="barcode"></app-search-by-barcode>
-      <mat-form-field>
-        <input matInput placeholder="Articles Tree" readonly type="text">
-      </mat-form-field>
       <button color="primary" disabled="disabled" mat-icon-button>
         <mat-icon>category</mat-icon>
       </button>
       <form>
         <mat-form-field>
-          <input #mobile matInput placeholder="User Discount" type="text">
+          <input #budge matInput placeholder="Budge" type="text">
+        </mat-form-field>
+        <button [disabled]="budge.value === ''" color="primary" mat-icon-button type="submit">
+          <mat-icon>description</mat-icon>
+        </button>
+      </form>
+      <form>
+        <mat-form-field>
+          <input #mobile matInput placeholder="Customer Discount" type="text">
         </mat-form-field>
         <button (click)="addDiscount(mobile.value)" [disabled]="mobile.value === ''" color="primary" mat-icon-button
                 type="submit">
