refactored jwt interceptor

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,7 @@
       <mat-icon>pageview</mat-icon>
     </button>
   </div>
-  <img alt="miw" src="../../assets/img/miw.png"/>
+  <img alt="miw" src="../../assets/imges/miw.png"/>
   <div>
     <button (click)="login()" *ngIf="!isLogged()" mat-button>
       <mat-icon>person_outline</mat-icon>
