--- a/src/app/shop/cashier-closed/cashier-closed.component.html
+++ b/src/app/shop/cashier-closed/cashier-closed.component.html
@@ -5,7 +5,7 @@
     Closed Cashier
   </mat-card-title>
   <mat-card-content>
-    <h3> Final Cash: {{cashierLast.finalCash | number:'1.0-2'}} €</h3>
-    <h3> Closure date: {{cashierLast.closureDate | date: 'medium'}} </h3>
+    <h3> Final Cash: {{(cashierLast | async)?.finalCash | number:'1.0-2'}} €</h3>
+    <h3> Closure date: {{(cashierLast | async)?.closureDate | date: 'medium'}} </h3>
   </mat-card-content>
 </mat-card>
