--- a/src/app/shop/cashier-opened/cashier-closure/cashier-dialog.component.html
+++ b/src/app/shop/cashier-opened/cashier-closure/cashier-dialog.component.html
@@ -1,17 +1,17 @@
-<h3 mat-dialog-title>Cashier Closure (total sales: € {{cashierState.totalSales}})</h3>
+<h3 mat-dialog-title>Cashier Closure (total sales: € {{(cashierState|async)?.totalSales}})</h3>
 <mat-dialog-content>
   <mat-form-field>
-    <input [(ngModel)]="cashierFinal.finalCash" matInput placeholder="Final cash (€ {{cashierState.totalCash}})"
+    <input [(ngModel)]="cashierFinal.finalCash" matInput placeholder="Final cash (€ {{(cashierState|async)?.totalCash}})"
            required
            type="number"/>
   </mat-form-field>
   <mat-form-field>
     <input [(ngModel)]="cashierFinal.finalCard" matInput
-           placeholder="Final card (€ {{cashierState.totalCard}})"
+           placeholder="Final card (€ {{(cashierState|async)?.totalCard}})"
            required type="number"/>
   </mat-form-field>
   <mat-form-field>
-    <input [(ngModel)]="cashierState.totalVoucher" matInput placeholder="Total vouchers" readonly type="number"/>
+    <input [ngModel]="((cashierState|async)?.totalVoucher)" matInput placeholder="Total vouchers" readonly type="number"/>
   </mat-form-field>
   <mat-form-field>
     <input [(ngModel)]="cashierFinal.comment" matInput placeholder="Comment" required type="text"/>
