--- a/src/app/shared/components/footer.component.html
+++ b/src/app/shared/components/footer.component.html
@@ -2,7 +2,7 @@
 <mat-grid-list cols="3" rowHeight="240px">
   <mat-grid-tile>
     <mat-list>
-      <div mat-subheader><img alt="miw" src="../../../assets/imges/miw.png"/></div>
+      <div mat-subheader><img alt="miw" src="../../../assets/images/miw.png"/></div>
       <mat-list-item>
         <mat-icon mat-list-icon>location_on</mat-icon>
         <div mat-line>C/ Alan Turing s/n, 28031 Madrid</div>
