--- a/src/app/shared/components/search.component.html
+++ b/src/app/shared/components/search.component.html
@@ -14,7 +14,7 @@
     <mat-icon>close</mat-icon>
   </button>
   <mat-autocomplete #auto="matAutocomplete">
-    <mat-option (click)="onClick(option)" *ngFor="let option of keys | async" [value]="option">
+    <mat-option (click)="onClick(option)" *ngFor="let option of (keys | async)" [value]="option">
       {{option}}
     </mat-option>
   </mat-autocomplete>
