--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary">
   <span>TPV </span>
-  <img alt="miw" src="../../assets/imges/miw.png"/>
+  <img alt="miw" src="../../assets/images/miw.png"/>
   <!--<span class="toolbar-spacer"></span>-->
   <span>
     <app-date></app-date>
