--- a/src/app/shop/cashier-opened/cashier-closure/cashier-dialog.component.html
+++ b/src/app/shop/cashier-opened/cashier-closure/cashier-dialog.component.html
@@ -1,7 +1,8 @@
 <h3 mat-dialog-title>Cashier Closure (total sales: € {{(cashierState|async)?.totalSales}})</h3>
 <mat-dialog-content>
   <mat-form-field>
-    <input [(ngModel)]="cashierFinal.finalCash" matInput placeholder="Final cash (€ {{(cashierState|async)?.totalCash}})"
+    <input [(ngModel)]="cashierFinal.finalCash" matInput
+           placeholder="Final cash (€ {{(cashierState|async)?.totalCash}})"
            required
            type="number"/>
   </mat-form-field>
@@ -11,7 +12,8 @@
            required type="number"/>
   </mat-form-field>
   <mat-form-field>
-    <input [ngModel]="((cashierState|async)?.totalVoucher)" matInput placeholder="Total vouchers" readonly type="number"/>
+    <input [ngModel]="((cashierState|async)?.totalVoucher)" matInput placeholder="Total vouchers" readonly
+           type="number"/>
   </mat-form-field>
   <mat-form-field>
     <input [(ngModel)]="cashierFinal.comment" matInput placeholder="Comment" required type="text"/>
